@@ -2,7 +2,7 @@
 bin_PROGRAMS = dfsch-repl
 nobase_include_HEADERS = \
 	dfsch/dfsch.h dfsch/stream.h dfsch/load.h \
-	dfsch/hash.h dfsch/number.h
+	dfsch/hash.h dfsch/number.h dfsch/strings.h
 
 lib_LTLIBRARIES     = libdfsch.la libdfsch_load.la
 
@@ -15,7 +15,8 @@ libdfsch_la_SOURCES = src/dfsch.c dfsch/dfsch.h src/object.h \
 	src/util.c src/util.h \
 	src/hash.c dfsch/hash.h \
 	src/promise.c dfsch/promise.h \
-	src/number.c dfsch/number.h
+	src/number.c dfsch/number.h \
+	src/strings.c dfsch/strings.h
 
 libdfsch_la_LDFLAGS = -version-info 4:0:0
 libdfsch_la_LIBADD =  -lgc -lpthread -ldl
