@@ -1,3 +1,7 @@
+2006-01-23  Ales Hakl  <ales at hakl dot net>
+
+	* src/strings.c: New handling of strings is working
+
 2006-01-22  Ales Hakl  <ales at hakl dot net>
 
 	* dfsch/strings.h: We should be able to create empty strings
